[gd_scene load_steps=9 format=2]

[ext_resource path="res://Level.gd" type="Script" id=1]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.gd" type="Script" id=3]
[ext_resource path="res://PlayerBullet.tscn" type="PackedScene" id=4]
[ext_resource path="res://rocket.png" type="Texture" id=5]
[ext_resource path="res://Terrain.gd" type="Script" id=6]
[ext_resource path="res://HUD.gd" type="Script" id=7]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 35, -30, 5, 47, -29, -30 )

[node name="Level" type="Node2D"]
script = ExtResource( 1 )
Mob = ExtResource( 2 )

[node name="Player" type="RigidBody2D" parent="."]
editor/display_folded = true
position = Vector2( 512.703, 167.629 )
rotation = -1.5708
gravity_scale = 0.1
contacts_reported = 1
contact_monitor = true
script = ExtResource( 3 )
bullet = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 2 )

[node name="Muzzle" type="Position2D" parent="Player"]
position = Vector2( 0, 70 )
rotation = 3.14159

[node name="Sprite" type="Sprite" parent="Player"]
rotation = 3.14159
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
limit_left = 0
limit_top = -100
__meta__ = {
"_edit_group_": true
}

[node name="BulletContainer" type="Node" parent="Player"]

[node name="BorderTimer" type="Timer" parent="Player"]
wait_time = 0.01

[node name="Terrain" type="StaticBody2D" parent="."]
editor/display_folded = true
script = ExtResource( 6 )

[node name="TerrainLine" type="Line2D" parent="Terrain"]
texture_mode = -1082211219

[node name="MobTimer" type="Timer" parent="."]
autostart = true

[node name="HUD" type="CanvasLayer" parent="."]
editor/display_folded = true
script = ExtResource( 7 )

[node name="Score" type="Label" parent="HUD"]
margin_bottom = 14.0

[node name="Label" type="Label" parent="HUD"]
margin_left = 450.639
margin_top = 100.701
margin_right = 587.639
margin_bottom = 114.701
text = "Press any key to start"

[node name="BlinkTimer" type="Timer" parent="HUD/Label"]
autostart = true

[node name="Highscore" type="Label" parent="HUD"]
anchor_right = 0.33
margin_right = -337.92
align = 2
valign = 1

[node name="GameOver" type="Label" parent="HUD"]
visible = false
margin_left = 480.537
margin_top = 79.3119
margin_right = 554.537
margin_bottom = 93.3119
text = "Game over!"

[node name="RestartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="game_over" from="." to="HUD" method="game_over"]
[connection signal="game_start" from="." to="HUD" method="game_start"]
[connection signal="game_start" from="." to="Player" method="game_start"]
[connection signal="body_entered" from="Player" to="." method="_on_Player_body_entered"]
[connection signal="timeout" from="Player/BorderTimer" to="Player" method="_on_BorderTimer_timeout"]
[connection signal="timeout" from="MobTimer" to="." method="spawn_mob"]
[connection signal="timeout" from="HUD/Label/BlinkTimer" to="HUD" method="blink"]
[connection signal="timeout" from="RestartTimer" to="." method="_on_RestartTimer_timeout"]
